xedoc-rs/tui-chatwidget/src/chatwidget/snapshots/xedoc_tui__chatwidget__tests__side_context_label_preserves_status_line.snap
---
source: tui-chatwidget/src/chatwidget/tests/side.rs
expression: terminal.backend()
---
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│❯ Check recently modified functions for compatibility                         │"
"╰───────────────────────────────────────────────────────────────── gpt-5.6-sol ╯"
"  gpt-5.6-sol                         Side from main thread · Ctrl+C to return  "
